# slubfind

./: .gitignore  CHANGELOG  README.rst  pyproject.toml  requirements.txt  setup.py
.github/: test.yml
.github/workflows/: test.yml
slubfind/: __init__.py  __main__.py  cli.py  client.py  parser.py
test/: test_cli.py  test_client.py  test_parser.py
utilities/: build
