[build-system]
requires = [
         "setuptools>=42",
         "setuptools_scm[toml]",
         "wheel",
]  # PEP 508 specifications.
build-backend = "setuptools.build_meta"

[project]
name = "slubfind"
description = "query data exports from the SLUB catalog"
readme = "README.rst"
authors = [
        {name = "Donatus Herre"},
        {email = "donatus.herre@slub-dresden.de"}
]
license = {text = "GPLv3"}
keywords = ["slub", "solr", "typo3-find"]
classifiers = [
            "Programming Language :: Python :: 3",
            "Operating System :: OS Independent",
            "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
            "Development Status :: 5 - Production/Stable",
            "Environment :: Console",
            "Intended Audience :: Developers",
            "Intended Audience :: Education",
            "Intended Audience :: Science/Research",
            "Topic :: Software Development :: Libraries :: Python Modules",
]
dynamic = ["version", "dependencies"]
requires-python = ">=3.8"

[project.urls]
homepage = "https://github.com/slub/slubfind"
repository = "https://github.com/slub/slubfind"
issues = "https://github.com/slub/slubfind/issues"
changelog = "https://github.com/slub/slubfind/blob/main/CHANGELOG"

[project.scripts]
slubfind = "slubfind.cli:main"

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[tool.setuptools_scm]
write_to = "slubfind/_version.py"

[tool.pylint."messages_control"]
disable = ["R0904"]  # too-many-public-methods (FincDocument wraps many Solr fields)

[tool.pylint.basic]
good-names = ["ok", "id", "oa"]  # idiomatic / match JSON field names

[tool.pylint.master]
ignore = ["_version.py"]  # auto-generated by setuptools_scm

[tool.pytest.ini_options]
testpaths = ["test"]
